<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My own app</string>
    <string name="capstone_app">Capstone</string>
    <string name="scores">Scores</string>
    <string name="library">Library</string>
    <string name="open_app">Opens the app </string>
</resources>
